# rs_watson

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  test.csv
.github/workflows/: build.yml  ci.yml  lint_test.yml  release.yml
rs_watson/: Cargo.toml  README.md
rs_watson/src/: config.rs  convert.rs  frame.rs  lib.rs  report.rs  testing.rs  watson.rs
rs_watson_cli/: Cargo.toml  README.md
rs_watson_cli/src/: commands.rs  config.rs  epic.rs  format.rs  main.rs  time_utils.rs
rs_watson_cli/src/commands/: frames.rs  init.rs  io.rs  meta.rs  mod.rs  tracking.rs
rs_watson_cli/tests/: cli.rs
rs_watson_export/: Cargo.toml  README.md
rs_watson_export/src/: csv.rs  lib.rs
rs_watson_storage/: Cargo.toml  README.md
rs_watson_storage/src/: json.rs  lib.rs  sqlite.rs
rs_watson_storage/src/migrations/: 001_initial.sql  002_add_start_index.sql
rs_watson_ui/: Cargo.toml  Info.plist  README.md
rs_watson_ui/src/: app.rs  colors.rs  format.rs  main.rs  tab_add.rs  tab_log.rs  tab_report.rs  types.rs  widgets.rs
src/: README.md  cli.rs  config.rs  main.rs
src/command/: add.rs  edit.rs  export.rs  import.rs  log.rs  mod.rs  report.rs  start.rs  stop.rs  today.rs
src/command/param/: at.rs  from_date.rs  mod.rs  project.rs  tag.rs  tags.rs  to_date.rs
src/command/utils/: time.rs
src/commands/: add.rs  edit.rs  export.rs  import.rs  log.rs  mod.rs  params.rs  report.rs  start.rs  stop.rs  today.rs
src/exporter/: csv.rs  mod.rs
src/importer/: mod.rs  td_watson.rs  ts_watson.rs
src/models/: frame.rs
src/storage/: entries.rs  entry.rs  mod.rs  report.rs
src/storing_engines/: json.rs
