[package]
name = "rs_watson"
version = "0.1.0"
description = "A simple CLI tool to track your time"
authors = ["Daedaleus <code@pkeil.de>"]
edition = "2021"

[dependencies]
clap_derive = "4.5.3"
clap = { version = "4.5.3", features = ["derive"] }
chrono = { version = "0.4.35", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
uuid = { version = "1.8.0", features = ["v4"] }
anyhow = "1.0.81"
itertools = "0.12.1"
csv = "1.3.0"

[profile.release]
lto = true
opt-level = "s"
strip = true