[package]
name = "rs_watson"
version = "0.1.0"
description = "A simple CLI tool to track your time"
authors = ["Daedaleus <code@pkeil.de>"]
edition = "2021"

[dependencies]
clap_derive = "4.5.5"
clap = { version = "4.5.7", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v4"] }
anyhow = "1.0.81"
itertools = "0.14"
csv = "1.3.0"
colored = "2.1.0"
toml = "0.8.14"
inquire = { version = "0.7.5", features = ["editor"] }
directories = "5.0.1"
enum_dispatch = "0.3.13"
derive_more = { version = "1.0.0-beta.6", features = ["deref", "deref_mut", "into", "into_iterator"] }

[profile.release]
lto = true
opt-level = "s"
strip = true