[package]
name = "rs_watson"
version = "0.2.1"
edition = "2024"

[features]
storage-json = ["rs_watson_storage/json"]
storage-sqlite = ["rs_watson_storage/sqlite"]

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0.0"
rs_watson_storage = { version = "0.2.1", path = "../rs_watson_storage", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
