[package]
name = "rs_watson_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "watson"
path = "src/main.rs"

[features]
default = ["storage-sqlite"]
# Enable the JSON flat-file storage backend
storage-json = ["rs_watson_storage/json"]
# Enable the SQLite storage backend (requires a C compiler for the bundled library)
storage-sqlite = ["rs_watson_storage/sqlite"]

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
dialoguer = "0.12.0"
dirs = "6.0.0"
owo-colors = "4.3.0"
rs_watson = { version = "0.1.0", path = "../rs_watson" }
rs_watson_export = { version = "0.1.0", path = "../rs_watson_export" }
rs_watson_storage = { version = "0.1.0", path = "../rs_watson_storage", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
uuid = { version = "1.23.1", features = ["v4"] }
