[package]
name = "rs_watson_storage"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.27.0"
